Fix uneven spacing on smaller browser widths

--- a/frontend/website/src/Header/Header.css
+++ b/frontend/website/src/Header/Header.css
@@ -10,8 +10,6 @@ header {
 
     z-index: 9999;
 
-    width: 100vw;
-
     line-height: 32px;
     font-family: Archivo;
     font-weight: 600;
