--- a/frontend/website/src/index.css
+++ b/frontend/website/src/index.css
@@ -21,6 +21,10 @@ body {
     margin: 0;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 a {
     text-decoration: none;
     color: inherit;
